--- a/lang/fr.json
+++ b/lang/fr.json
@@ -128,8 +128,14 @@
 
   "sect_rsvp_titre":"Si vous avez d’autres questions, vous pouvez nous joindre au :",
   "sect_rsvp_cont":"Nous serons trois à célébrer cet amour, nous aimerions que vous soyez là avec nous.",
-  "sect_rsvp_button":"RSVP avant le 31.12.2025"
+  "sect_rsvp_button":"RSVP avant le 31.12.2025",
 
+
+
+
+
+
+  "8_comment":"Page histoire"
 
 
 
