--- a/lang/fr.json
+++ b/lang/fr.json
@@ -64,14 +64,14 @@
   
   
   "info_logement_titre":"Logement",
-  "info_logement_intro":"Nous aimerions beaucoup que tous nos invités puissent rester sur place pour profiter pleinement du weekend ensemble. Cependant, il n’y a pas assez de lits pour tout le monde.<br><br>Voici donc les différentes possibilités qui s'offrent à vous:<br><br>",
-  "info_logement_1titre":"1.\tChambres à l’hôtel Chäserstatt (sur place)",
+  "info_logement_intro":"<br>Nous aimerions beaucoup que tous nos invités puissent rester sur place pour profiter pleinement du weekend ensemble. Cependant, il n’y a pas assez de lits pour tout le monde.<br><br>Voici donc les différentes possibilités qui s'offrent à vous:<br><br>",
+  "info_logement_1titre":"<br><br>1.\tChambres à l’hôtel Chäserstatt (sur place)",
   "info_logement_1cont":"Pour celles et ceux qui souhaitent dormir dans une chambre, c’est possible, mais à vos frais. Il y a aussi la possibilité d’ajouter un matelas supplémentaire dans chaque chambre.",
   "info_logement_2titre":"2.\tTentes (sur place)",
   "info_logement_2cont":"Pour les aventuriers, les romantiques sous les étoiles ou les nostalgiques du camping, vous pouvez planter votre tente gratuitement sur place. Si c’est une tente qui vous manque, pas de soucis on s’arrange. Vous pourrez utiliser les toilettes et les douches de l’hôtel, sans frais supplémentaires.",
   "info_logement_3titre":"3.\tVans ou voitures (sur place)",
   "info_logement_3cont":"Si vous avez un van ou souhaitez dormir dans votre voiture, c’est également possible ! Vous pourrez utiliser les toilettes et les douches de l’hôtel, sans frais supplémentaires.",
-  "info_logement_4titre":"4.\tChambres à l’hôtel (ailleurs)",
+  "info_logement_4titre":"<br>4.\tChambres à l’hôtel (ailleurs)",
   "info_logement_4cont":"<br>Dans le cas où il n’y aurait plus de chambres sur place et que l’idée de faire du camping ne vous vend pas du rêve, il y a plusieurs hôtels à 15-20min de route dans les villages en bas. Nous vous laisserions le soin de faire la réservation mais nous sommes à disposition si vous avez des questions.",
   "info_logement_concl":"Vous allez pouvoir nous indiquez votre préférence parmi les différentes options ci-dessus dans le RSVP afin que nous puissions vous répartir dans les différentes chambres. Si besoin nous vous contacterons directement à ce sujet.",
   "info_fin_titre":"Arrivée et départ",
