--- a/lang/en.json
+++ b/lang/en.json
@@ -53,26 +53,26 @@
   "5_comment": "infomartion",
 
   "info_titre":"Important information",
-  "info_intro":"Before packing your bags, take a few minutes to carefully read the information below. It will help you organize your trip, find out how to get there, where to stay, and what to expect once you arrive. Nothing complicated, we promise—just a few practical details to know so that everything goes smoothly!",
-  "info_trans_titre":"Transport",
+  "info_intro":"<br>Before packing your bags, take a few minutes to carefully read the information below. It will help you organize your trip, find out how to get there, where to stay, and what to expect once you arrive. Nothing complicated, we promise—just a few practical details to know so that everything goes smoothly!",
+  "info_trans_titre":"<br><br>Transport",
   "info_trans_intro":"The wedding venue is not accessible by public transport. The nearest train station is Fiesch. From there, a car is required. If you plan to come by public transport, please let us know in advance so that we can arrange transportation for the last part of the journey.<br> At the end of the village of Mühlebach, just before the final climb, there is a large area where you can park for free. Coordinates for the free parking lot in Mühlebach: 46°24'36.0“N 8°09'30.7”E. From there, you have two options:<br><br>",
   "info_trans_1titre":"1.\tDrive up the small mountain road",
   "info_trans_1cont":"Access costs CHF 5 per car and is valid for 24 hours (so you can drive up and down as many times as you like during this period). There are plenty of parking spaces available at the top, so no need to worry about that",
-  "info_trans_2titre":"2.\tLeave your car at the bottom and carpool",
+  "info_trans_2titre":"<br>2.\tLeave your car at the bottom and carpool",
   "info_trans_2cont":"The parking lot at the bottom is free and spacious. You can then share a ride with other guests for the last part of the journey (12-minute drive). Feel free to organize yourselves to make the climb easier!",
-  "info_logement_titre":"Accommodation",
-  "info_logement_intro":"We would love for all our guests to stay on site and enjoy the weekend together. However, there are not enough beds for everyone.<br><br>Here are the different options",
-  "info_logement_1titre":"1.\tRooms at the Chäserstatt Hotel (on site)",
+  "info_logement_titre":"<br><br>Accommodation",
+  "info_logement_intro":"<br>We would love for all our guests to stay on site and enjoy the weekend together. However, there are not enough beds for everyone.<br><br>Here are the different options",
+  "info_logement_1titre":"<br>1.\tRooms at the Chäserstatt Hotel (on site)",
   "info_logement_1cont":"For those who wish to sleep in a room, this is possible, but at your own expense. It is also possible to add an extra mattress to each room.",
-  "info_logement_2titre":"2.\tTents (on site)",
+  "info_logement_2titre":"<br>2.\tTents (on site)",
   "info_logement_2cont":"For the adventurous, those who enjoy romantic nights under the stars, or those who are nostalgic for camping, you can pitch your tent on site free of charge. If you don't have a tent, don't worry, we can help.<br>You can use the hotel's toilets and showers at no extra charge.",
-  "info_logement_3titre":"3.\tVans oor cars (on site)",
+  "info_logement_3titre":"<br>3.\tVans oor cars (on site)",
   "info_logement_3cont":"f you have a van or want to sleep in your car, that's also possible!<br>You can use the hotel's toilets and showers at no extra charge.",
-  "info_logement_4titre":"4.\tHotel rooms (elsewhere)",
+  "info_logement_4titre":"<br>4.\tHotel rooms (elsewhere)",
   "info_logement_4cont":"If there are no more rooms available on site and camping doesn't appeal to you, there are several hotels 15-20 minutes away by car in the villages below. We'll leave it up to you to make the reservation, but we're available if you have any questions.",
   "info_logement_concl":"You will be able to indicate your preference among the various options above in the RSVP so that we can assign you to the different rooms. If necessary, we will contact you directly about this.",
-  "info_fin_titre":"Arrival and departure",
-  "info_fin_cont":"The wedding will take place over two days: Saturday and Sunday.<br>We, the bride and groom, will already be there a few days beforehand. If anyone would like to come earlier to enjoy the location, we would be delighted!<br>It will be a bit like a mini-vacation in the mountains, with a relaxed atmosphere. The accommodation and meals will be at your own expense —but the good times will be free.<br>We should mention that if you would like to spend both nights in a tent or in your car, that is also possible (at no extra cost).<br><br>If you arrive on Saturday, the festivities will begin at 2 p.m.<br>For those staying at the hotel on Saturday night, some rooms will be available upon arrival. If not, they will be ready by 4 p.m. at the latest. In any case, you will have a place to leave your luggage.<br>For those who plan to sleep in tents, we strongly recommend that you arrive a little early so that you have time to set up before the ceremony, scheduled for 2:30 p.m.<br>This will save you from having to leave during the party... or having to set up your tent, possibly drunk, in the dark at 4 a.m.!<br><br>As for Sunday morning, breakfast will be served between 8:00 a.m. and 10:00 a.m. Rooms must be vacated by 10:00 a.m.",
+  "info_fin_titre":"<br><br>Arrival and departure",
+  "info_fin_cont":"<br>The wedding will take place over two days: Saturday and Sunday.<br>We, the bride and groom, will already be there a few days beforehand. If anyone would like to come earlier to enjoy the location, we would be delighted!<br>It will be a bit like a mini-vacation in the mountains, with a relaxed atmosphere. The accommodation and meals will be at your own expense —but the good times will be free.<br>We should mention that if you would like to spend both nights in a tent or in your car, that is also possible (at no extra cost).<br><br>If you arrive on Saturday, the festivities will begin at 2 p.m.<br>For those staying at the hotel on Saturday night, some rooms will be available upon arrival. If not, they will be ready by 4 p.m. at the latest. In any case, you will have a place to leave your luggage.<br>For those who plan to sleep in tents, we strongly recommend that you arrive a little early so that you have time to set up before the ceremony, scheduled for 2:30 p.m.<br>This will save you from having to leave during the party... or having to set up your tent, possibly drunk, in the dark at 4 a.m.!<br><br>As for Sunday morning, breakfast will be served between 8:00 a.m. and 10:00 a.m. Rooms must be vacated by 10:00 a.m.",
 
 
   "6_comment": "FAQ",
