--- a/lang/fr.json
+++ b/lang/fr.json
@@ -34,9 +34,9 @@
   "horaire_t3b":"Jeux et défis en équipes",
   "horaire_t4a":"17H00 – Apéro🥂",
   "horaire_t4b":"Boissons et amuse-bouches",
-  "horaire_t5a":"19h00 – Repas 🍽️",
+  "horaire_t5a":"19H00 – Repas 🍽️",
   "horaire_t5b":"Buffet grillades et dessert",
-  "horaire_t6a":"22H – Fête 🎉",
+  "horaire_t6a":"22H00 – Fête 🎉",
   "horaire_t6b":"Jusqu'au bout de la nuit",
   "horaire_t7a":"Dès 8H00 – Déjeuner 🥐",
   "horaire_t7b":"Pour les lève-tôt",
@@ -47,7 +47,7 @@
   "histoire_titre":"Notre histoire",
   "histoire_annik":"« On a littéralement TOUT partagé ensemble : nos premiers regards, nos premières vacances, nos premiers désaccords… et même notre première rupture» – Annik",
   "histoire_joaquim":"«Si notre amour tient une année à distance, il tiendra à vie» – Joaquim",
-  "histoire_button":"Pour tout l’histoire<br>Cliquez ici",
+  "histoire_button":"Pour toute l’histoire<br>Cliquez ici",
 
 
   "5_comment": "infomartion",
@@ -72,7 +72,7 @@
   "info_logement_3titre":"<br>3.\tVans ou voitures (sur place)",
   "info_logement_3cont":"Si vous avez un van ou souhaitez dormir dans votre voiture, c’est également possible ! Vous pourrez utiliser les toilettes et les douches de l’hôtel, sans frais supplémentaires.",
   "info_logement_4titre":"<br>4.\tChambres à l’hôtel (ailleurs)",
-  "info_logement_4cont":"Dans le cas où il n’y aurait plus de chambres sur place et que l’idée de faire du camping ne vous vend pas du rêve, il y a plusieurs hôtels à 15-20min de route dans les villages en bas. Nous vous laisserions le soin de faire la réservation mais nous sommes à disposition si vous avez des questions.",
+  "info_logement_4cont":"Dans le cas où il n’y aurait plus de chambres sur place et que l’idée de faire du camping ne vous vend pas du rêve, il y a plusieurs hôtels à 15-20min de route dans les villages en bas. Nous vous laisserons le soin de faire la réservation mais nous sommes à disposition si vous avez des questions.",
   "info_logement_concl":"<br><br>Vous allez pouvoir nous indiquez votre préférence parmi les différentes options ci-dessus dans le RSVP afin que nous puissions vous répartir dans les différentes chambres. Si besoin nous vous contacterons directement à ce sujet.",
   "info_fin_titre":"<br><br>Arrivée et départ",
   "info_fin_cont":"<br>Le mariage se déroulera sur deux jours : samedi et dimanche.<br>Nous, les mariés, serons déjà sur place quelques jours avant. Si certains souhaitent venir plus tôt pour profiter du lieu ce serait avec grand plaisir !<br>Ce sera un peu comme des mini-vacances à la montagne, ambiance détendue et apéros improvisés. Les nuits et repas seront à votre charge — mais les bons moments, eux, seront gratuits.<br>Nous précisons tout de même que si vous souhaiteriez passer les deux nuits sous tente ou dans la voiture cela est également possible (sans frais).<br><br>Si vous arrivez samedi, les festivités commenceront à 14h.<br>Pour ceux qui dormiront à l’hôtel le samedi soir, certaines chambres seront déjà accessibles dès votre arrivée, si ce n’est pas le cas, elles le seront au plus tard à 16h. Dans tous les cas, vous aurez un endroit pour déposer vos bagages.<br>Pour ceux qui prévoient de dormir sous tente, nous vous recommandons vivement d’arriver un peu en avance afin d’avoir le temps de l’installer avant la cérémonie, prévue à 14h30.<br>Cela vous évitera de devoir vous absenter pendant la fête… ou de devoir monter votre tente possiblement saoul dans le noir à 4h du matin !<br><br>Pour ce qui est du dimanche matin, le petit déjeuné sera servi entre 8h et 10h. Et les chambres devront être libérées à 10h.",
