--- a/lang/en.json
+++ b/lang/en.json
@@ -55,7 +55,7 @@
   "info_titre":"Important information",
   "info_intro":"<br>Before packing your bags, take a few minutes to carefully read the information below. It will help you organize your trip, find out how to get there, where to stay, and what to expect once you arrive. Nothing complicated, we promise—just a few practical details to know so that everything goes smoothly!",
   "info_trans_titre":"<br><br>Transport",
-  "info_trans_intro":"The wedding venue is not accessible by public transport. The nearest train station is Fiesch. From there, a car is required. If you plan to come by public transport, please let us know in advance so that we can arrange transportation for the last part of the journey.<br> At the end of the village of Mühlebach, just before the final climb, there is a large area where you can park for free. Coordinates for the free parking lot in Mühlebach: 46°24'36.0“N 8°09'30.7”E. From there, you have two options:<br><br>",
+  "info_trans_intro":"The wedding venue is not accessible by public transport. The nearest train station is Fiesch. From there, a car is required. If you plan to come by public transport, please let us know in advance so that we can arrange transportation for the last part of the journey.<br> At the end of the village of Mühlebach, just before the final climb, there is a large area where you can park for free. Here are the coordinates for the free parking lot in Mühlebach: 46°24'36.0“N 8°09'30.7”E. From there, you have two options:<br><br>",
   "info_trans_1titre":"1.\tDrive up the small mountain road",
   "info_trans_1cont":"Access costs CHF 5 per car and is valid for 24 hours (so you can drive up and down as many times as you like during this period). There are plenty of parking spaces available at the top, so no need to worry about that",
   "info_trans_2titre":"<br>2.\tLeave your car at the bottom and carpool",
@@ -134,7 +134,7 @@
 
   "sect_rsvp_titre":"If you have any further questions, you can reach us at:",
   "sect_rsvp_cont":"There will be three of us celebrating this love, and we would love for you to be there with us.",
-  "sect_rsvp_button":"RSVP before December 31, 2025.",
+  "sect_rsvp_button":"Please respond before December 31, 2025.",
 
 
 
