--- a/lang/en.json
+++ b/lang/en.json
@@ -95,11 +95,11 @@
   "faq_trans_heberg_quest1":"How to get there?",
   "faq_trans_heberg_rep1":"As mentioned in the “Important Information” section, the easiest way to get there is by car.<br>If you are traveling by public transport, the nearest train station is Fiesch. However, the last part of the journey cannot be covered by public transport.",
   "faq_trans_heberg_quest2":"Is there a parking on site?",
-  "faq_trans_heberg_rep2":"As mentioned in the “Important Information” section, there are plenty of spaces around the hotel.<br>Please note that there is a charge of CHF 5/24 hours for each car that drives up. It is also possible to leave your car at the bottom of the paid road (in the free parking area in Mühlebach) and drive up in a carpool",
+  "faq_trans_heberg_rep2":"As mentioned in the “Important Information” section, there are plenty of spaces around the hotel.<br>Please note that there is a charge of CHF 5/24 hours for each car that drives up. It is also possible to leave your car at the bottom of the paid road (in the free parking area in Mühlebach) and drive up in a carpool.",
   "faq_trans_heberg_quest3":"Will there be shuttles to take us to the venue?",
   "faq_trans_heberg_rep3":"No shuttles are planned.",
   "faq_trans_heberg_quest4":"Where can we stay?",
-  "faq_trans_heberg_rep4":"As mentioned in the “Important Information” section, there are several options available to you. We will leave it up to you to choose your preferred option when you fill out the RSVP.",
+  "faq_trans_heberg_rep4":"As mentioned in the “Important Information” section, there are several options available. We will leave it up to you to choose your preferred option when you fill out the RSVP.",
   "faq_trans_heberg_qest5":"Where and when can we leave our luggage?",
   "faq_trans_heberg_rep5":"As mentioned in the “Important Information” section, if your room is ready upon arrival, you can settle in before the ceremony. If not, rooms will be available by 4 p.m. at the latest. In any case, you will have a space available to leave your luggage.<br>For those sleeping in tents, we advise you to plan a little extra time and set up your tent as soon as you arrive, before the ceremony. Setting up a tent at night, possibly drunk, is not that easy (we're not speaking from experience).",
   
@@ -111,7 +111,7 @@
   
   "faq_prog_titre":"Program & organisation",
   "faq_prog_quest1":"Is there a party the next day?",
-  "faq_prog_rep1":"Breakfast is provided on site between 8:00 a.m. and 10:00 a.m",
+  "faq_prog_rep1":"Breakfast is provided on site between 8:00 a.m. and 10:00 a.m.",
   "faq_prog_quest2":"Can we arrive early or stay longer?",
   "faq_prog_rep2":"We would be delighted to have you. We will be there several days before and after.",
   
@@ -121,7 +121,7 @@
   "faq_enfant_quest2":"Are there cribs and high chairs available on site?",
   "faq_enfant_rep2":"Yes, both. You can let us know your needs in this regard when you complete the RSVP.",
   "faq_enfant_quest3":"Can I bring a +1?",
-  "faq_enfant_rep3":"Invitations are nominative; we want the wedding to remain an intimate, small-scale event so that we can fully enjoy the company of each person present.<br>Thank you very much for your understanding, and we look forward to having you with us on this beautiful day",
+  "faq_enfant_rep3":"Invitations are nominative; we want the wedding to remain an intimate, small-scale event so that we can fully enjoy the company of each person present.<br>Thank you very much for your understanding, and we look forward to having you with us on this beautiful day.",
   
   "faq_divers_titre":"Other",
   "faq_divers_quest1":"Can we take photos during the ceremony and reception?",
