--- a/lang/fr.json
+++ b/lang/fr.json
@@ -50,7 +50,7 @@
   "histoire_button":"Pour toute l’histoire<br>Cliquez ici",
 
   "lademande":"La demande",
-  "lademande_text":"Rempli annik",
+  "lademande_text":"<br><br>Pour que vous n'ayez pas que du texte à lire, voici une petite vidéo racontant comment Joaquim a \"enfin\" fait sa demande.",
 
 
   "5_comment": "infomartion",
