--- a/lang/de.json
+++ b/lang/de.json
@@ -50,6 +50,7 @@
   "histoire_button":"Für die gesamte Geschichte<br>Klicke hier",
 
   "lademande":"Der Heiratsantrag",
+  "lademande_text":"Damit es nicht nur Text zum lesen gibt, ist hier ein kurzes Video, in dem wir erzählen wie Joaquim \"endlich\" seinen Antrag gemacht hat",
 
 
   "5_comment": "infomartion",
