--- a/lang/fr.json
+++ b/lang/fr.json
@@ -3,7 +3,7 @@
 
   "nav_fete": "La fête",
   "nav_histoire":"Notre histoire",
-  "nav_info":"Info",
+  "nav_info":"Infos",
   "nav_faq":"FAQ",
   "nav_rsvp":"RSVP",
   "nav_langue":"🌍 Langues",
